fixed cutoff

--- a/client/src/styles/Poem.module.css
+++ b/client/src/styles/Poem.module.css
@@ -12,28 +12,25 @@
 }
 
 .svg{
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0px 10px;
+  margin: 0px 15px 15px 0px;
+  overflow: visible;
 }
 
 .liked{
   fill: #b54c50;
   stroke: #b54c50;
   stroke-width: 2px;
-  width: 18px;
-  height: 20px;
 }
 
 .unliked{
   fill: white;
   stroke: black;
   stroke-width: 2px;
-  width: 18px;
-  height: 20px;
 }
 
 .button{
